# AdventOfCode

./: .gitignore  .pre-commit-config.yaml  README.md  deno.json  go.mod  justfile  main.go  pyproject.toml  ruff.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.code.yml  justfile
2021/: go.mod  main.go  main.py  yes.txt
2021/Go/day1/: day1.go  day1_test.go
2021/Go/day2/: day2.go  day2_test.go
2021/Go/day3/: day3_test.go
2021/Go/day4/: day4.go  day4_test.go
2021/Go/day5/: day5_test.go
2021/Python/: day2.py  day3.py  day5.py  main.py
2021/day1/: day1.go  day1.py  day1_test.go
2021/day2/: day2.go  day2_test.go
2021/day3/: day3.go  day3.py  day3_test.go
2021/day4/: day4.go  day4.py  day4_test.go
2021/day5/: day5.go  day5.py  day5_test.go
2021/scripts/: watch_tests.sh
2021/utils/: utils.py
2022/JavaScript/: package.json
2022/JavaScript/day1/: index.ts
2022/JavaScript/day11/: index.ts  (+1 more)
2023/JavaScript/: .eslintrc.js  bun.lockb  package.json  tsconfig.json
2023/Swift/: Package.resolved  Package.swift
2024/Data/: day5-invalids.txt
2024/Python/: day1.ipynb  day10.ipynb  day11.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day5.js  day6.ipynb  day7.ipynb  day8.ipynb  day9-2.ipynb  day9.ipynb  dayx.ipynb
2024/Swift/: Package.swift
AdventOfCode/: AdventOfCodeApp.swift  ContentView.swift
AdventOfCode.xcodeproj/: project.pbxproj
Go/aoc2021/: go.mod
Python/aoc2021/: main.py
Swift/AOC2022/: Package.resolved  Package.swift
TS/aoc2022/: package.json
day1/: day1.go
day2/: day2.go
utils/: utils.go
(+148 files in other folders)
