[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Kamaal Farah", email = "kamaal.f1@gmail.com" }]
dependencies = ["ipykernel>=6.29.5", "polars>=1.14.0", "jupyterlab>=4.3.1"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["2024/Python/src/aoc"]
